Bug 422643 - New Hard Disk Activity widget shows many digits after the decimal separator
Summary: New Hard Disk Activity widget shows many digits after the decimal separator
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-08 17:02 UTC by Patrick Silva
Modified: 2021-03-03 12:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (34.50 KB, image/png)
2020-06-08 17:02 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-06-08 17:02:30 UTC
Created attachment 129142 [details]
screenshot

SUMMARY
See the attached screenshot please.

EXPECTED RESULT
just one or two digits after decimal separator.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.71.0
Qt Version: 5.14.2
Comment 1 Arjen Hiemstra 2020-06-16 10:59:07 UTC
Git commit 8b57868009eb8cd55ae53da7f7baafb41a98d064 by Arjen Hiemstra.
Committed on 12/06/2020 at 10:56.
Pushed by davidedmundson into branch 'Plasma/5.19'.

Add units to disk/all/{read,write}

Apparently this was missing. Without these, formatting does not happen
and we get bad display of values.
Related: bug 422644

M  +2    -0    plugins/global/ksgrd/ksgrdiface.cpp

https://invent.kde.org/plasma/ksysguard/commit/8b57868009eb8cd55ae53da7f7baafb41a98d064
Comment 2 Patrick Silva 2020-09-18 15:04:30 UTC
This bug is back on both Arch running Plasma 5.20 beta and neon unstable.

Operating System: Arch Linux
KDE Plasma Version: 5.19.90
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.1
Comment 3 Patrick Silva 2021-03-03 12:23:56 UTC
Fixed on both Arch (Plasma 5.21.2) and neon unstable.