Add units to disk/all/{read,write}

Apparently this was missing. Without these, formatting does not happen
and we get bad display of values.

BUG: 422643
BUG: 422644